confirmation pdf stylesheet modified

--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
             Aufgrund der hohen Nachfrage kann pro Person und Tag nur ein Fass gebucht werden. Ebenfalls bieten wir im Moment nur Aufenthalte von einer Nacht an. Längere Buchungen können wir leider nicht entgegen nehmen. Wir bitten um Verständnis.
         </p>
       </div>
-      <div id="content">
-      </div>
-      <div id="footer"> © Schlafen im Fass 2015 | Website by Cédric Brütsch, Philipp Rupp & Marco Schaub
+      <div id="footer"> © Schlafen im Fass 2015 | Website by Cédric Brütsch, Philipp Rupp &amp; Marco Schaub
       </div>
     </div>
   </div>
